bodhi-aws-main/deployment/distribution-template/bodhi-forecast-ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
  #   control-plane: superset
     istio-injection: enabled
  name: forecast
  annotations:
    # annotation key is configurable
    iam.amazonaws.com/permitted: "arn:aws:iam::<<__aws_account_id__>>:role/.*"
