bodhi-aws-main/deployment/distribution-template/bodhi-forecast-ui/forecastui-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: forecast
  namespace: forecast

spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - console.elbbodhibelcorp.com
  http:
    - headers:
        request:
          add:
            x-forwarded-prefix: /forecast
      match:
        - uri:
            prefix: /forecast/
      rewrite:
        uri: /
      route:
        - destination:
            host: bodhi-forecast-ui.forecast.svc.cluster.local
            port:
              number: 8501
