bodhi-aws-main/deployment/distribution-template/bodhi-forecast-ui/allow-all-ns-forecastui-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kubeflow-allow-forecast
  namespace: forecast
spec:
  action: ALLOW
  rules:
    - {}
    # - from:
    #     - source:
    #         namespaces:
    #           - mlflow
